Changelog
=========


1.6.1 (unreleased)
------------------

- Nothing changed yet.


1.6.0 (2016-11-07)
------------------

- Add various JavaScript events for convenience. [jone]


1.5.1 (2016-10-20)
------------------

- Hide current path on root when showing one level. [jone]

- Fix invalid markup in template, causing broken markup with chameleon. [jone]


1.5.0 (2016-10-17)
------------------

- Mobile buttons: add settings "show_tabs" and "show_two_levels_on_root". [jone]

- Pass the url of the navigation root to the handlebars template.
  [mbaechtold]

- Use helper text for screenreaders also as title attribute on the link itself.
  [mathias.leimgruber]

- Implement plone translations for handlebars templates.
  [mathias.leimgruber]

- Do not render handlebars templates with PageTemplate engine.
  [mathias.leimgruber]

- Add "navActiveNode" class to the node which is currently loaded. [jone]

- Add separate "current node" item in addition to "parent node". [jone]

- Leaf nodes: open parent navigation. [jone]

- Prevent inline javascript from evaluating twice.
  [Kevin Bieri]


1.4.0 (2016-09-26)
------------------

- Install ``ftw.gopip`` for better performance. [jone]

- Mark leaf nodes and remove link to children. [jone]


1.3.0 (2016-09-20)
------------------

- Add support for plone.app.multilingual [Kevin Bieri]


1.2.0 (2016-09-09)
------------------

- Open the target behind a top level node not having children after
  having clicked it. [jone, mbaechtold]

- Scroll back to the top level node after having clicked it. [jone]


1.1.0 (2016-09-09)
------------------

- Fix crash when parent is excluded from navigation by also including
  parents when excluded from navigation. [jone]

- Make it possible to close the menu when clicking somewhere outside of the menu [Kevin Bieri]


1.0.2 (2016-08-08)
------------------

- Fix hightlighting more than one top level tab
  [Kevin]

- Translate user menu actions. [jone]
